aws/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: angular-service
                port:
                  number: 80
          - path: /restaurant
            pathType: Prefix
            backend:
              service:
                name: restaurant-service
                port:
                  number: 9091
          - path: /foodCatalog
            pathType: Prefix
            backend:
              service:
                name: food-service
                port:
                  number: 9092
          - path: /user
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 9093
          - path: /order
            pathType: Prefix
            backend:
              service:
                name: order-service
                port:
                  number: 9094
